--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,58 @@
 /* TODO Add site wide styles */
+html {
+	background-color: #fff;
+}
+
+body {
+	padding: 50px;
+	font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+}
+
+a {
+	color: #00b7ff;
+	text-decoration: none;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+ol,
+li,
+ul,
+div,
+span,
+body,
+header,
+nav {
+	font-size: 1rem;
+	color: inherit;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: 2rem;
+}
+
+i {
+	cursor: pointer;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+button:focus {
+	outline: none;
+}
