added highlights for the current active channel and dms

--- a/react-app/src/components/AppUI/SideBar/Channels.css
+++ b/react-app/src/components/AppUI/SideBar/Channels.css
@@ -64,7 +64,11 @@
 	opacity: 0.5;
 }
 
-/* .active {
-	background: #038edf;
-	color: #ffffff;
+/* .channels__list li a {
+	padding: 10px 20px;
+}
+
+.channels__list li a:hover {
+	background-color: red;
+	color: #fff;
 } */
