--- a/react-app/src/components/AppUI/SideBar/SideBar.css
+++ b/react-app/src/components/AppUI/SideBar/SideBar.css
@@ -6,7 +6,7 @@ body {
 	height: 100%;
 	font-size: 17px;
 	font-family: 'Lato', Helvetica, sans-serif;
-	color: #555459;
+	/* color: #555459; */
 }
 
 .workspace-menu {
