--- a/react-app/src/components/AppUI/SideBar/DMs.css
+++ b/react-app/src/components/AppUI/SideBar/DMs.css
@@ -105,3 +105,17 @@
 	font-weight: bold;
 	color: red;
 }
+
+.new_message:after {
+	content: 'New!';
+	display: inline-block;
+	margin-right: 0.2rem;
+	/* height: 20px; */
+	background-color: red;
+	border-radius: 3px;
+	margin-left: 10px;
+	color: white;
+	padding: 3px;
+	font-size: 14px;
+	font-weight: 600;
+}
