--- a/react-app/src/components/AppUI/SideBar/Channels.css
+++ b/react-app/src/components/AppUI/SideBar/Channels.css
@@ -42,6 +42,7 @@
 	align-items: center;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
+	justify-content: start;
 }
 .channels__button {
 	opacity: 0.7;
