--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -9,6 +9,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
+	height: 75px;
 	display: flex;
 	padding: 18px;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
@@ -41,8 +42,8 @@
 }
 .main__content {
 	position: relative;
-	top: 60px;
-	height: calc(100vh - 60px);
+	top: 75px;
+	height: calc(100vh - 75px);
 	overflow-y: scroll;
 }
 .main__container {
@@ -52,7 +53,7 @@
 }
 
 .main__chat {
-	margin-top: 30px;
+	margin-bottom: 190px;
 }
 
 .main__chat-item {
