--- a/react-app/src/components/AppUI/MainInterface.css
+++ b/react-app/src/components/AppUI/MainInterface.css
@@ -1,6 +1,9 @@
 .main-container {
+	position: absolute;
+	bottom: 0;
+	padding-top: 38px;
 	width: 100%;
 	height: 100%;
-	display: flex;
-	overflow: hidden;
+	display: grid;
+	grid-template-columns: 250px 1fr;
 }
