--- a/react-app/src/components/AppUI/SideBar/SideBar.css
+++ b/react-app/src/components/AppUI/SideBar/SideBar.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 html,
 body {
+	box-sizing: border-box;
 	position: relative;
 	width: 100%;
 	height: 100%;
 	font-size: 17px;
 	font-family: 'Lato', Helvetica, sans-serif;
+
 	/* color: #555459; */
 }
 
@@ -46,7 +48,6 @@ body {
 	background: #350d36;
 }
 .sidebar {
-	position: fixed;
 	overflow-y: scroll;
 	top: 38px;
 	bottom: 0;
