--- a/react-app/src/components/AppUI/SideBar/DMs.css
+++ b/react-app/src/components/AppUI/SideBar/DMs.css
@@ -123,7 +123,8 @@
 .remove-dm {
 	line-height: 1.7;
 	border-radius: 50%;
-	color: rgba(255, 255, 255, 50%);
+	/* color: rgba(255, 255, 255, 50%); */
+	color: pink;
 	height: 25px;
 	width: 25px;
 	font-size: 14px;
@@ -131,9 +132,15 @@
 	margin-left: auto;
 	z-index: 100; 
 	text-align: center;
-	display: none;
+	visibility: none;
 }
 
-.dm__button:hover > .remove-dm {
-	display: block;
+.remove-dm:hover {
+	display:block;
+	visibility: visible;
+}
+
+.dm__li {
+	display: flex;
+	flex-direction: row;
 }
