--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -108,10 +108,20 @@
 }
 
 .chat__image-container {
-	width: 44px;
-	height: 44px;
-	border-radius: 5px;
-	margin-right: 10px;
+    position: relative;
+    width: 44px;
+    height: 44px;
+    border-radius: 10px;
+    background-color: var(--defaultProfPic);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+
 }
 
 .chat__username {
