--- a/react-app/src/components/AppUI/SideBar/DMs.css
+++ b/react-app/src/components/AppUI/SideBar/DMs.css
@@ -55,28 +55,29 @@
 	padding: 0 0.3rem;
 }
 .dm__button:hover {
-	background: #350d36;
+	background: var(--sideBarHover);
 	cursor: pointer;
 }
 
 .dm__button:before {
-	content: '';
-	display: inline-block;
+	/* content: '\1F4A4'; */
+	content: '\1F436';
+	/* display: inline-block;
 	margin-right: 0.2rem;
 	height: 10px;
 	background: #696969;
 	border-radius: 50%;
-	margin-right: 10px;
+	margin-right: 10px; */
 }
 
 .dm__button--online:before {
-	content: '';
-	display: inline-block;
+	content: '\1F436';
+	/* display: inline-block;
 	margin-right: 0.2rem;
 	height: 10px;
 	background: #00ffba;
 	border-radius: 50%;
-	margin-right: 10px;
+	margin-right: 10px; */
 }
 
 .dm__button--active,
