--- a/react-app/src/components/AppUI/UserProfile/ProfilePhoto.css
+++ b/react-app/src/components/AppUI/UserProfile/ProfilePhoto.css
@@ -1,6 +1,28 @@
+.profile__photo-div{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    font-size: 150%;
+    background-color: var(--defaultProfPic);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
 .profile__photo-pic{
     object-fit: cover;
     width: 100%;
     height: 100%;
     border-radius: 5px;
+}
+
+.profile__photo-pic-default{
+    font-size: inherit;
+    color: white;
 }
