--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -313,15 +313,12 @@
 	border: 1px solid rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
 	padding: 10px 0;
+	z-index: 2;
 }
 
 .main__add-teammate-item{
 	padding: 5px 15px;
 	background-color: white;
-}
-
-.main__add-teammate-item{
-
 }
 
 .main__add-teammate-item:hover{
