added logged in searchAll searchitems

--- a/react-app/src/components/AppUI/NavBar/Navigation.css
+++ b/react-app/src/components/AppUI/NavBar/Navigation.css
@@ -78,20 +78,30 @@
 	background-color: black;
 	width: 100%;
 	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
 }
 
-.search-item {
+/* .search-item {
 	list-style-type: none;
 }
 .search-item:hover {
-	background-color: rgba(173, 216, 230, 0.39)
-}
+	background-color: rgba(173, 216, 230, 0.39);
+	cursor: grab;
+} */
 
 .user_ele, .channel_ele {
 	color: white;
 }
 
+.user_ele:hover, .channel_ele:hover {
+	background-color: rgba(173, 216, 230, 0.39)
+}
 .username_logo {
 	display: flex;
 	align-items: center;
+}
+
+.online_user::before {
+	content: '\1F436';
 }
